--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-offline": "^5.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-remark-images": "^6.6.0",
+    "gatsby-remark-lazy-load": "^1.0.2",
+    "gatsby-remark-prismjs": "^6.6.0",
     "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-remark": "^5.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
     "gsap": "^3.9.1",
+    "lazysizes": "^5.3.2",
+    "prismjs": "^1.26.0",
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
